# unleash-client-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  conanfile.py  conanfile.txt  sonar-project.properties
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: Conan.cmake
include/unleash/: context.h  feature.h  unleashclient.h
include/unleash/api/: apiclient.h  cprclient.h
include/unleash/strategies/: applicationhostname.h  default.h  flexiblerollout.h  gradualrolloutrandom.h  gradualrolloutsessionid.h  gradualrolloutuserid.h  murmur3hash.h  remoteaddress.h  strategy.h  userwithid.h
include/unleash/utils/: murmur3hash.h
include/unleash/variants/: variant.h
packaging/: CMakeLists.txt  unleashConfig.cmake
src/: CMakeLists.txt  feature.cpp  unleashclient.cpp
src/api/: cprclient.cpp
src/strategies/: applicationhostname.cpp  default.cpp  flexiblerollout.cpp  gradualrolloutrandom.cpp  gradualrolloutsessionid.cpp  gradualrolloutuserid.cpp  murmur3hash.cpp  remoteaddress.cpp  strategy.cpp  userwithid.cpp
src/utils/: murmur3hash.cpp
src/variants/: variant.cpp
test/: CMakeLists.txt  tests.cpp
